[package]
name = "veh"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-sys = {version = "0.61", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Services",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_ClrHosting",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_Security_Authorization",
    "Win32_Globalization",
    "Win32_Networking_WinHttp",
    "Win32_System_Memory",
    "Win32_System_Kernel",
]}